<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DuLichActivity">

    <ImageView
        android:id="@+id/imgtravel1"
        android:layout_width="389dp"
        android:layout_height="174dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="11dp"
        app:srcCompat="@drawable/Miếu_Bà_Chúa_Xứ_Núi_Sam" />

    <TextView
        android:id="@+id/txttravel1"
        android:layout_width="310dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="51dp"
        android:gravity="center"
        android:text="@string/travel1"
        android:textColor="#FF5722"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgtravel2"
        android:layout_width="384dp"
        android:layout_height="194dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="14dp"
        app:srcCompat="@drawable/RungTramTraSu" />

    <TextView
        android:id="@+id/txttravel2"
        android:layout_width="333dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="214dp"
        android:gravity="center"
        android:text="@string/travel2"
        android:textColor="#FF5722"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgtravel3"
        android:layout_width="376dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="64dp"
        app:srcCompat="@drawable/Tượng_Di_Lặc_trên_núi_Cấm" />

    <TextView
        android:id="@+id/txttravel3"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="11dp"
        android:gravity="center"
        android:text="@string/travel3"
        android:textColor="#FF5722"
        android:textStyle="bold" />

</RelativeLayout>